# ApiCoreX

./: README.md  pyproject.toml  pytest.ini  report.html  requirements.txt
src/apicorex/: __init__.py
src/apicorex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/apicorex/common/: config.py
src/apicorex/core/: api_client.py
src/apicorex/mobile/: __init__.py  driver_factory.py
src/apicorex/ui_core/: __init__.py  base_page.py
src/apicorex/web/: driver_factory.py
tests/: conftest.py  test_users.py
